css/launchcircle.css
/* ... */
header .launch-circle-info h1 {
    height: 80px;
    color: rgba(54, 52, 57, 1);
    font-weight: 300;
    font-size: 26px;
    max-width: 963px;
    letter-spacing: 1.2px;
    line-height: 40px;
    text-align: center;
    padding: 0;
    margin-bottom: 42px;
    display: inline-table;
}

header .launch-circle-info h1 span {
    font-weight: 600;
}

header .launch-circle-info h3 {
    height: 23px;
    color: rgba(156, 155, 160, 1);
    font-size: 14px;
    line-height: 23px;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: .6px;
    margin-bottom: 15px;
}

header .launch-circle-images {
    margin-top: 97px;
}

.navigation {
    position: relative;
    z-index: 20;
    width: 100%;
    padding-left: .5em;
    padding-right: .5em;
}

header .navbar {
    margin-top: 37px;
}

.navigation.stuck {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
    background: #FFF;
    width: 100%;
    margin: 0;
    padding: 0 30px !important;

}

header .stuck .navbar {
    margin-top: 0px;
}

.stuck .navbar-toggleable-md.navbar-collapse {
    margin-top: 0;
}

header .header-nav .nav-link {
    line-height: 37px;
}

/* --------------------------------------
 Sub-header
-----------------------------------------*/

header .header-nav.sub-header .nav-link:first-child {
    padding-top: 0;
}

header .sub-header-navbar {
    display: none;
    background-color: #F4F8FC;
    position: absolute;
    bottom: 0;
    transform: translateY(100%);
    left: 0;
    right: 0;
}

header .sub-header-dropdown:hover .sub-header-navbar {
    display: flex;
}

.sub-header-navbar .nav-link {
    display: flex;
    align-items: center;
    justify-content: center;
}

.sub-header-navbar .w-icon .point {
    position: relative;
    transform: translate(0);
    margin-right: 1em;
}

.sub-header-navbar .w-icon .point img {
    transform: translate(-53%,-31%);
}

.navigation.stuck .sub-header-navbar {
    border-bottom: 1px solid #e8e8e8;
}

@media screen and (max-width: 991px) {
    .sub-header-navbar .w-icon .point {
        display: none;
    }
    header .navigation .sub-header-dropdown {
        padding: 0;
    }
    header .navigation .sub-header-dropdown .dropdown-toggle {
        display: none !important;
    }
    header .navigation .sub-header-dropdown .sub-header-navbar {
        display: flex;
        background: white;
        position: relative;
        transform: translateY(0);
    }
}

/* --------------------------------------
 Main
-----------------------------------------*/

main {
    margin: 20px 0 140px;
}

.launch-circle-title {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 10vh;
    color: #363439;
    text-align: center;
    white-space: nowrap;
}

.launch-title h2 {
    font-weight: 300;
    font-size: 26px;
    letter-spacing: 1px;
    line-height: 40px;
}

.launch-title h2 span {
    font-weight: 600;
}

#launchCircleCarousel,
.block-container {
    -webkit-box-flex: 0;
    -webkit-flex: 0 0 96.666667%;
    -ms-flex: 0 0 96.666667%;
    flex: 0 0 96.666667%;
    max-width: 96.666667%;
}

.wrapper {
    padding: 0;
}

.launch-circle-title h2 {
    font-size: 14px;
    font-weight: bold;
    letter-spacing: 2px;
    line-height: 40px;
    -webkit-transform: rotate(270deg);
    -moz-transform: rotate(270deg);
    -ms-transform: rotate(270deg);
    -o-transform: rotate(270deg);
    transform: rotate(270deg);
}

.launch-circle-title h2:before {
    content: '';
    display: inline-block;
    height: 2px;
    width: 30px;
    background-color: #12D4C4;
    margin: 4px 21px 4px 0px;
}

.control {
    height: 40px;
    width: 40px;
    opacity: 0.47;
    background-color: #FFFFFF;
    box-shadow: 0 7px 11px 0 rgba(85, 134, 222, 0.09);
    border-radius: 100%;
    margin: 0 5px;
    position: relative;
}

.control:hover {
    opacity: 1;
    box-shadow: 0 7px 11px 0 rgba(85, 134, 222, 0.3);
}

.carousel-control-wraper {
    position: relative;
    right: 0;
    bottom: 30px;
}


.control-next-icon::after,
.carousel-control-prev-icon,
.carousel-control-next-icon {
    content: '';
    display: block;
    background-image: url("/images/arrow-pointing-to-right-color.svg");
    background-position: 50% 50%;
    background-repeat: no-repeat;
}

.control-next-icon::after {
    height: 40px;
    width: 40px;
    background-size: 50%;
}

.carousel-control-prev-icon {
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    -o-transform: rotate(180deg);
    transform: rotate(180deg);
}

/* --------------------------------------
   PORTFOLIO
-----------------------------------------*/

.portfolio {
    margin-top: 100px;
}

.portfolio .carousel-item > div {
    padding-bottom: 20px;
    padding-top: 20px;
}

.portfolio .carousel-item .item {
    border: 1px solid rgb(230, 234, 238);
    border-radius: 5px;
    background-color: rgba(255, 255, 255, 1);
    padding: 15px;
    overflow: hidden;
    max-width: 432px;
    margin: 0 auto;
}

.portfolio .carousel-item .item:hover {
    box-shadow: 0 2px 13px 0 rgb(215, 219, 223);
}

.portfolio .carousel-item .item h2 {
    color: #363439;
    font-size: 14px;
    font-weight: 500;
    line-height: 23px;
    max-height: 53px;
    height: 35px;
    text-align: left;
    position: relative;
    letter-spacing: .9px;
    margin-top: 10px;
    margin-bottom: 0;
    position: relative;
}

.portfolio .carousel-control-wraper {
    position: absolute;
    top: -33px;
    bottom: inherit;
    width: 100%;
    right: 15px;

}

#launchCircleCarousel .carousel-control-wraper {
    max-width: 83vw;
    left:15px;
}

.portfolio .carousel-control-prev,
.portfolio .carousel-control-next {
    position: relative;
    height: 30px;
    width: 30px;
}
/* ... */

